add goog number of card

--- a/cartes.md.html
+++ b/cartes.md.html
@@ -1,94 +1,138 @@
 # cartes
 
-## les types de cartes
-
-- cartes PNJ : perso ses caractéristiques: boisson, boissonOpti, boisson, credibilitruc
-- items permanant : eco cup ou autre
-
-
 ## Les cartes
 
 
-**********************************************************************************
-*     .-----------------.         .-----------------.         .-----------------. 
-*    |    Paillardier    |       |      capote       |       |préservatif féminin|
-*    +-------------------+       +-------------------+       +-------------------+
-*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
-*    | permet de chanter |       |  .-. .-.          |       |                   |
-*    |      1 fois       |       | |   |   |         |       |                   |
-*    |                   |       |  \     /   pour   |       |            pour   |
-*    |                   |       |   \   /  chopper  |       |          chopper  |
-*    |                   |       |    \ /            |       |                   |
-*    |                   |       |     '             |       |                   |
-*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
-*     '-----------------'         '-----------------'         '-----------------' 
-*                                                                                 
-*     .-----------------.         .-----------------.         .-----------------. 
-*    |     eco cup       |       |  verre à pinte    |       |  corne            |
-*    +-------------------+       +-------------------+       +-------------------+
-*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
-*    | réserve 8 doses   |       | réserve 8 doses   |       | réserve 8 doses   |
-*    |                   |       |                   |       |                   |
-*    |      |  |         |       |     |   |.-.      |       |     l'eco cup du  |
-*    |      |  |         |       |     |   |   |     |       |     viking        |
-*    |      +--+         |       |     |   |   |     |       |                   |
-*    |                   |       |     +---+'-'      |       |                   |
-*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
-*     '-----------------'         '-----------------'         '-----------------' 
+*******************************************************************************************
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |     rebloch'      | |     rebloch'      | |     rebloch'      | |     rebloch'      |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 4 parts           | | 4 parts           | | 4 parts           | | 4 parts           |
+* | gagne: +4@ /perso | | gagne: +4@ /perso | | gagne: +4@ /perso | | gagne: +4@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
 *
-*     .-----------------.         .-----------------.         .-----------------. 
-*    |  gôle de génépi   |       |    chartreuse     |       |   gôle de poire   |
-*    +-------------------+       +-------------------+       +-------------------+
-*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
-*    | 4 doses           |       | 6 doses           |       | 4 doses           |
-*    | gagne: +5@ /perso |       | gagne: +6@ /perso |       | gagne: +5@ /perso |
-*    |                   |       |                   |       |                   |
-*    |                   |       |                   |       |                   |
-*    |                   |       |                   |       |                   |
-*    |                   |       |                   |       |                   |
-*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
-*     '-----------------'         '-----------------'         '-----------------' 
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |     saucisson     | |     saucisson     | |     saucisson     | |     saucisson     |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 4 parts           | | 4 parts           | | 4 parts           | | 4 parts           |
+* | gagne: +5@ /perso | | gagne: +5@ /perso | | gagne: +5@ /perso | | gagne: +5@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
+*
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |  gôle de génépi   | |    chartreuse     | |   gôle de poire   | |      bières       |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 4 doses           | | 6 doses           | | 4 doses           | | 3 doses           |
+* | gagne: +5@ /perso | | gagne: +6@ /perso | | gagne: +5@ /perso | | gagne: +5@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
+*
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |  gôle de génépi   | |    chartreuse     | |   gôle de poire   | |      bières       |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 4 doses           | | 6 doses           | | 4 doses           | | 3 doses           |
+* | gagne: +5@ /perso | | gagne: +6@ /perso | | gagne: +5@ /perso | | gagne: +5@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
 *   
-*     .-----------------.         .-----------------.     
-*    |     rebloch'      |       |     saucisson     |    
-*    +-------------------+       +-------------------+    
-*    | TYPE: item        |       | TYPE: item        |    
-*    | 4 parts           |       | 4 parts           |    
-*    | gagne: +4@ /perso |       | gagne: +5@ /perso |    
-*    |                   |       |                   |    
-*    |                   |       |                   |    
-*    |                   |       |                   |    
-*    |                   |       |                   |    
-*    | coup de départ: 1 |       | coup de départ: 1 |    
-*     '-----------------'         '-----------------'     
-* 
-*     .-----------------.     
-*    |    bière belge    |    
-*    +-------------------+    
-*    | TYPE: item        |    
-*    | 3 doses           |    
-*    | gagne: +5@ /perso |    
-*    |                   |    
-*    |                   |    
-*    |                   |    
-*    |                   |    
-*    | coup de départ: 1 |    
-*     '-----------------'     
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |      capote       | |      capote       | | capote phospho    | |préservatif féminin|
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* |  .-. .-.          | |  .-. .-.          | |                   | |                   |
+* | |   |   |         | | |   |   |         | |   Luke,           | |                   |
+* |  \     /   pour   | |  \     /   pour   | |   je ne serai     | |            pour   |
+* |   \   /  chopper  | |   \   /  chopper  | |   ton             | |          chopper  |
+* |    \ /            | |    \ /            | |   père            | |                   |
+* |     '             | |     '             | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |    Paillardier    | |    Paillardier    | |    Paillardier    | |    Paillardier    |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | permet de chanter | | permet de chanter | | permet de chanter | | permet de chanter |
+* |      1 fois       | |      1 fois       | |      1 fois       | |      1 fois       |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
 *
-*     .-----------------.     
-*    |       pin's       |    
-*    +-------------------+    
-*    | TYPE: item        |    
-*    | 3 doses           |    
-*    | gagne: +2@ /perso |    
-*    |                   |    
-*    |                   |    
-*    |                   |    
-*    |                   |    
-*    | coup de départ: 1 |    
-*     '-----------------'     
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |       pin's       | |       pin's       | |       pin's       | |       pin's       |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 3 doses           | | 3 doses           | | 3 doses           | | 3 doses           |
+* | gagne: +2@ /perso | | gagne: +2@ /perso | | gagne: +2@ /perso | | gagne: +2@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
 *
-**********************************************************************************
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |       pin's       | |       pin's       | |       pin's       | |       pin's       |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | 3 doses           | | 3 doses           | | 3 doses           | | 3 doses           |
+* | gagne: +2@ /perso | | gagne: +2@ /perso | | gagne: +2@ /perso | | gagne: +2@ /perso |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
+*  .-----------------.   .-----------------.   .-----------------.   .-----------------. 
+* |     eco cup       | |     eco cup       | |     eco cup       | |     eco cup       |
+* +-------------------+ +-------------------+ +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
+* | réserve 8 doses   | | réserve 8 doses   | | réserve 8 doses   | | réserve 8 doses   |
+* |                   | |                   | |                   | |                   |
+* |      |  |         | |      |  |         | |      |  |         | |      |  |         |
+* |      |  |         | |      |  |         | |      |  |         | |      |  |         |
+* |      +--+         | |      +--+         | |      +--+         | |      +--+         |
+* |                   | |                   | |                   | |                   |
+* |                   | |                   | |                   | |                   |
+*  '-----------------'   '-----------------'   '-----------------'   '-----------------' 
+*                                                                  
+*  .-----------------.   .-----------------. 
+* |  verre à pinte    | |  corne            |
+* +-------------------+ +-------------------+
+* | TYPE: item        | | TYPE: item        |
+* | réserve 8 doses   | | réserve 8 doses   |
+* |                   | |                   |
+* |     |   |.-.      | |     l'eco cup du  |
+* |     |   |   |     | |     viking        |
+* |     |   |   |     | |                   |
+* |     +---+'-'      | |                   |
+* |                   | |                   |
+*  '-----------------'   '-----------------' 
+*
+*******************************************************************************************
 
 ## PNJ
 
