cards in html version

--- a/cartes.md.html
+++ b/cartes.md.html
@@ -62,7 +62,7 @@
 * | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
 * |  .-. .-.          | |  .-. .-.          | |                   | |                   |
 * | |   |   |         | | |   |   |         | |   Luke,           | |                   |
-* |  \     /   pour   | |  \     /   pour   | |   je ne serai     | |            pour   |
+* |  \     /   pour   | |  \     /   pour   | |   je ne serai pas | |            pour   |
 * |   \   /  chopper  | |   \   /  chopper  | |   ton             | |          chopper  |
 * |    \ /            | |    \ /            | |   père            | |                   |
 * |     '             | |     '             | |                   | |                   |
@@ -110,7 +110,7 @@
 * |     eco cup       | |     eco cup       | |     eco cup       | |     eco cup       |
 * +-------------------+ +-------------------+ +-------------------+ +-------------------+
 * | TYPE: item        | | TYPE: item        | | TYPE: item        | | TYPE: item        |
-* | réserve 8 doses   | | réserve 8 doses   | | réserve 8 doses   | | réserve 8 doses   |
+* | réserve 6 doses   | | réserve 6 doses   | | réserve 6 doses   | | réserve 6 doses   |
 * |                   | |                   | |                   | |                   |
 * |      |  |         | |      |  |         | |      |  |         | |      |  |         |
 * |      |  |         | |      |  |         | |      |  |         | |      |  |         |
